song view (only with title)

--- a/Juda-Uwp/Juda-Uwp.csproj
+++ b/Juda-Uwp/Juda-Uwp.csproj
@@ -103,6 +103,9 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Features\SongView\SongViewPage.xaml.cs">
+      <DependentUpon>SongViewPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Features\Directory\DirectoryPage.xaml.cs">
       <DependentUpon>DirectoryPage.xaml</DependentUpon>
     </Compile>
@@ -152,6 +155,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Features\SongView\SongViewPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Features\Directory\DirectoryPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
